--- a/apps/backend/templates/emails/welcome.html
+++ b/apps/backend/templates/emails/welcome.html
@@ -122,7 +122,7 @@
                       style="color:rgb(107,114,128);font-size:0.75rem;line-height:1rem;margin-bottom:16px;margin-top:16px">
                       ©
                       <!-- -->2025<!-- -->
-                      Alfred. All rights reserved.
+                      Tasker. All rights reserved.
                     </p>
                     <p
                       style="color:rgb(107,114,128);font-size:0.75rem;line-height:1rem;margin-bottom:16px;margin-top:16px">
